--- a/source/info.plist
+++ b/source/info.plist
@@ -223,7 +223,7 @@
 		</array>
 	</dict>
 	<key>createdby</key>
-	<string>Carl Smith (@CarlosNZ). Updated by Jarek Hartman</string>
+	<string>Carl Smith (@CarlosNZ). Updated by @himat</string>
 	<key>description</key>
 	<string>A World Clock for Alfred</string>
 	<key>disabled</key>
@@ -235,15 +235,27 @@
 		<dict>
 			<key>config</key>
 			<dict>
+				<key>alignment</key>
+				<integer>0</integer>
+				<key>backgroundcolor</key>
+				<string></string>
+				<key>fadespeed</key>
+				<integer>0</integer>
+				<key>fillmode</key>
+				<integer>0</integer>
+				<key>font</key>
+				<string></string>
 				<key>largetypetext</key>
 				<string>{query}</string>
+				<key>textcolor</key>
+				<string></string>
 			</dict>
 			<key>type</key>
 			<string>alfred.workflow.output.largetype</string>
 			<key>uid</key>
 			<string>BC542037-8795-4FE1-8534-AF381F4197FC</string>
 			<key>version</key>
-			<integer>2</integer>
+			<integer>3</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -252,6 +264,8 @@
 				<false/>
 				<key>alfredfiltersresultsmatchmode</key>
 				<integer>0</integer>
+				<key>argumenttreatemptyqueryasnil</key>
+				<false/>
 				<key>argumenttrimmode</key>
 				<integer>0</integer>
 				<key>argumenttype</key>
@@ -290,7 +304,7 @@
 			<key>uid</key>
 			<string>F15F2405-5743-4407-9BFF-A45E6783BA88</string>
 			<key>version</key>
-			<integer>2</integer>
+			<integer>3</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -441,6 +455,8 @@
 				<false/>
 				<key>alfredfiltersresultsmatchmode</key>
 				<integer>0</integer>
+				<key>argumenttreatemptyqueryasnil</key>
+				<false/>
 				<key>argumenttrimmode</key>
 				<integer>0</integer>
 				<key>argumenttype</key>
@@ -481,7 +497,7 @@
 			<key>uid</key>
 			<string>DBA4F782-B7E9-486E-92A4-D06655FFE839</string>
 			<key>version</key>
-			<integer>2</integer>
+			<integer>3</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -1043,8 +1059,10 @@ v1.0
 			<real>10</real>
 		</dict>
 	</dict>
+	<key>variablesdontexport</key>
+	<array/>
 	<key>version</key>
-	<string>2.10</string>
+	<string>2.11</string>
 	<key>webaddress</key>
 	<string>https://jhartman.pl/tag/time-zones/</string>
 </dict>
